--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
                 <a href="https://www.youtube.com/@arifwicaksono26"><i class='bx bxl-youtube'></i></a>
                 <a href="https://www.instagram.com/arifwcksn26/"><i class='bx bxl-instagram-alt'></i></a>
                 <a href="https://www.linkedin.com/in/arifwcksn26/"><i class='bx bxl-linkedin'></i></a>
+                <a href="https://github.com/ArifWcksn26"><i class='bx bxl-github'></i></a>
             </div>
     
             <a href="CV Arif Wicaksono.pdf" class="btn">Download CV</a>
