--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 Saya Mahasiswa semester 8 di Universitas Pamulang, jurusan Sistem Informasi, yang terus belajar dan memiliki motivasi untuk berkontribusi pada dunia 
                 teknologi yang terus berkembang. Menguasai bahasa pemrograman Java, dan familiar dengan HTML, CSS, dan SQL. 
                 Selain itu, saya tengah mengembangkan keterampilan dalam ilmu data, termasuk analisis data dan pembelajaran mesin, dengan menggunakan Python dan R. 
-                Dengan memiliki semangat yang besar untuk menghadapi tantangan baru dan berkomitmen untuk terus meningkatkan kemampuan saya
+                Dengan memiliki semangat yang besar untuk menghadapi tantangan baru dan berkomitmen untuk terus meningkatkan kemampuan saya.
             </p>
             <p>
                 Situs web ini adalah blog pribadi saya 
@@ -136,7 +136,7 @@
                 <img src="images/portfolio1.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
+                    <h4>Card Hover</h4>
                     <p>platform yang berfokus pada makanan, khususnya masakan Indonesia.</p>
                     <a href="Dailyfood/menu.html"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -145,9 +145,9 @@
                 <img src="images/portfolio2.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
-                    <a href="Freshshop Ecommerce/about.html"><i class='bx bx-link-external'></i></a>
+                    <h4>Streamlit</h4>
+                    <p>Membuat dashboard interaktif menggunakan Streamlit untuk memvisualisasikan dan menganalisis data secara real-time.</p>
+                    <a href="https://project-data-e-commerce.streamlit.app/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
