--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
                 <div class="portfolio-layer">
                     <h4>Cafe Shop</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
+                    <p>Aplikasi untuk mempermudah transaksi cofe shop.</p>
                     <a href="Kedai Kopi/index.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
@@ -163,8 +163,8 @@
                 <img src="images/portfolio4.jpg" alt="">
 
                 <div class="portfolio-layer">
-                    <h4>Web Design</h4>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique, ipsam est.</p>
+                    <h4>Semantic HTML</h4>
+                    <p>Aplikasi web sederhana yang menyediakan fitur pencarian untuk navigasi konten di dalam halaman.</p>
                     <a href="#"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
