--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 <div class="portfolio-layer">
                     <h4>Semantic HTML</h4>
                     <p>Aplikasi web sederhana yang menyediakan fitur pencarian untuk navigasi konten di dalam halaman.</p>
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="Project Web/index.html"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
             <div class="portfolio-box">
