--- a/index.html
+++ b/index.html
@@ -45,10 +45,9 @@
         <div class="home-content">
           <h3> Hi, Saya</h3>
             <h1>Arif Wicaksono</h1>
-            <p>Seorang Fresh Graduate Sistem Informasi yang fokus pada Web Development. 
-Berpengalaman mengembangkan aplikasi berbasis Laravel, PHP, dan JavaScript seperti sistem pembayaran SPP digital, 
-sistem informasi akademik, serta dashboard analisis data. Saya terus mengembangkan kemampuan teknis untuk menjadi developer 
-yang berkualitas dan siap berkontribusi di dunia industri.</p>
+            <p>Seorang Fresh Graduate Sistem Informasi dengan fokus pada Web Development. 
+                Memiliki kemampuan dalam mengembangkan aplikasi berbasis Laravel, PHP, dan JavaScript, termasuk sistem pembayaran SPP digital, sistem informasi akademik, serta dashboard analisis data. 
+                Terus mengasah kemampuan teknis untuk menjadi developer yang berkualitas dan siap berkontribusi di dunia industri.</p>
     
     
             <div class="social-media">
@@ -82,12 +81,9 @@ yang berkualitas dan siap berkontribusi di dunia industri.</p>
     dengan fokus pada Web Development, saya sangat termotivasi untuk terus belajar dan berkontribusi di industri teknologi yang dinamis.
     </h3>
     <p>
-        Saya memiliki pengalaman dalam mengembangkan aplikasi berbasis Laravel dan Filament, 
-    termasuk sistem pembayaran SPP digital serta sistem informasi akademik untuk pengelolaan nilai siswa. 
-    Saya juga mengembangkan <i>NginapAja</i>, platform booking tempat tinggal berbasis arsitektur repository Laravel.
-    Selain pengembangan web, saya juga memiliki ketertarikan pada bidang Data Science, 
-    menggunakan Python dan R untuk analisis serta visualisasi data. 
-    Saya telah membuat dashboard interaktif menggunakan Streamlit untuk eksplorasi data secara menyeluruh.
+        Saya mengembangkan aplikasi berbasis Laravel dan Filament, termasuk sistem pembayaran SPP digital serta sistem informasi akademik untuk pengelolaan nilai siswa. Saya juga mengembangkan <i>NginapAja</i>, 
+        platform booking tempat tinggal berbasis arsitektur repository Laravel. 
+        Selain pengembangan web, saya tertarik pada bidang Data Science, menggunakan Python dan R untuk analisis serta visualisasi data, termasuk membuat dashboard interaktif menggunakan Streamlit untuk eksplorasi data secara menyeluruh.
     </p>
     <p>
        Saya berkomitmen untuk terus belajar dan mengeksplorasi berbagai aspek teknologi yang menarik, sebagai seorang pemula yang berusaha ingin menjadi ahli dalam bidangnya,
