add max-width 480px breakpoint & fix alignment on 768px

--- a/index.html
+++ b/index.html
@@ -364,13 +364,13 @@ berbasis data secara lebih menyeluruh.
 
             <div class="contact-info-item">
                 <i class='bx bx-phone'></i>
-                <span>083140223072</span>
+                <span>+6283140223072</span>
             </div>        
         </div>
 
         <!-- RIGHT SIDE FORM -->
        <div class="contact-right">
-    <form action="https://formsubmit.co/arifwicaksono@gmail.com" method="POST">
+    <form action="https://formsubmit.co/arifwicaksono947@gmail.com" method="POST">
 
         <input type="hidden" name="_captcha" value="false">
         <input type="hidden" name="_template" value="table">
