replace testimonial section with tools and update 1080px responsive styles

--- a/index.html
+++ b/index.html
@@ -31,9 +31,11 @@
             <a href="#home" class="active">Home</a>
             <a href="#about">About</a>
             <a href="#services">Services</a>
+            <a href="#skills">Skills</a>
             <a href="#projects">Projects</a>
             <a href="#contact">Contact</a>
         </nav>
+
 
         <div class="bx bx-moon" id="darkMode-icon"></div>
 
@@ -188,6 +190,100 @@ berbasis data secara lebih menyeluruh.
     </div>
 </section>
 
+<!-- Tools Skill Section -->
+<section class="tools-container" id="skills">
+    <h2 class="heading">Skills & <span>Tools</span></h2>
+
+    <div class="tools-grid">
+
+        <!-- Tool 1 -->
+        <div class="tool-box">
+            <img src="images/mysql.png" alt="MySQL / DBeaver">
+            <h3>MySQL & DBeaver</h3>
+            <p>Database Management, Query Optimization, ERD Design.</p>
+        </div>
+
+        <!-- Tool 2 -->
+        <div class="tool-box">
+            <img src="images/python.png" alt="Python">
+            <h3>Python</h3>
+            <p>Pandas, NumPy, Data Cleaning, Automation.</p>
+        </div>
+
+        <!-- Tool 3 -->
+        <div class="tool-box">
+            <img src="images/php.png" alt="PHP">
+            <h3>PHP</h3>
+            <p>Backend Scripting, Form Handling, Server Logic.</p>
+        </div>
+
+        <!-- Tool 4 -->
+        <div class="tool-box">
+            <img src="images/laravel.png" alt="Laravel">
+            <h3>Laravel</h3>
+            <p>MVC, Routing, REST API, Authentication.</p>
+        </div>
+
+        <!-- Tool 5 -->
+        <div class="tool-box">
+            <img src="images/git.png" alt="Git & GitHub">
+            <h3>Git & GitHub</h3>
+            <p>Version Control, Branching Workflow.</p>
+        </div>
+
+        <!-- Tool 6 -->
+        <div class="tool-box">
+            <img src="images/vscode.png" alt="VS Code">
+            <h3>VS Code</h3>
+            <p>Extensions, Debugging, IDE Setup.</p>
+        </div>
+
+        <!-- Tool 7 -->
+        <div class="tool-box">
+            <img src="images/figma.png" alt="Figma">
+            <h3>Figma</h3>
+            <p>UI/UX Design, Wireframing, Prototyping.</p>
+        </div>
+
+        <!-- Tool 8 -->
+        <div class="tool-box">
+            <img src="images/chrome.png" alt="Chrome DevTools">
+            <h3>Chrome DevTools</h3>
+            <p>Element Inspector, CSS Debugging, Network Monitoring.</p>
+        </div>
+
+        <!-- Tool 9 -->
+        <div class="tool-box">
+            <img src="images/javascript.png" alt="JavaScript">
+            <h3>JavaScript</h3>
+            <p>DOM Manipulation, Fetch API, Interactive UI.</p>
+        </div>
+
+        <!-- Tool 10 -->
+        <div class="tool-box">
+            <img src="images/Node.js_logo.svg" alt="Node.js">
+            <h3>Node.js</h3>
+            <p>Backend Runtime, API Integration, NPM Tools.</p>
+        </div>
+
+        <!-- Tool 11 -->
+        <div class="tool-box">
+            <img src="images/html.png" alt="HTML & CSS">
+            <h3>HTML & CSS</h3>
+            <p>Responsive Layout, Flexbox, Grid, Animation.</p>
+        </div>
+
+        <!-- Tool 12 -->
+        <!-- Tool 12 -->
+        <div class="tool-box">
+            <img src="images/sheets.png" alt="Excel & Google Sheets">
+            <h3>Excel & Google Sheets</h3>
+            <p>Data Analysis, Pivot Tables, Reporting, Collaboration.</p>
+        </div>
+    </div>
+</section>
+
+
  <!-- projects section -->
    <section class="projects" id="projects">
     <h2 class="heading">My <span>Projects</span></h2>
@@ -263,7 +359,8 @@ berbasis data secara lebih menyeluruh.
                 <div class="tech-badges">
                     <span>Laravel</span>
                     <span>PHP</span>
-                    <span>MySQL</span>
+                    <span>Filament</span>
+                    <span>Midtrans</span>
                 </div>
             </div>
         </div>
@@ -304,43 +401,6 @@ berbasis data secara lebih menyeluruh.
 
     </div>
 </section>
-
-    <!-- testimonial design -->
-    <div class="testimonial-container">
-        <h2 class="heading">Technical <span>Skills</span></h2>
-
-        <div class="testimonial-wrapper">
-            <div class="testimonial-box mySwiper">
-                <div class="testimonial-content swiper-wrapper">
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/Oracle.jpg" alt="Oracle">
-                        <h3>Database</h3>
-                        <p>Saya memiliki pemahaman dasar dalam menggunakan SQL untuk melakukan operasi CRUD, membuat tabel, 
-        serta mengelola relasi antar tabel. Saya pernah berlatih menggunakan Oracle Database dan PostgreSQL 
-        untuk kebutuhan pembelajaran dan proyek kecil seperti pembuatan sistem informasi sederhana.
-        Saat ini saya terus mengembangkan kemampuan dalam perancangan database dan optimasi query.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/Python.png" alt="Python">
-                        <h3>Python</h3>
-                        <p>Saya memiliki kemampuan dasar Python untuk pemrograman umum dan pengolahan data sederhana. 
-                    Saya terbiasa menggunakan pustaka seperti Pandas dan NumPy, serta sedang belajar lebih lanjut 
-                    mengenai analisis data dan automasi. Saya juga pernah membuat aplikasi sederhana menggunakan Streamlit.</p>
-                    </div>
-                    <div class="testimonial-slide swiper-slide">
-                        <img src="images/Html.jpg" alt="Pemrograman">
-                        <h3>Programming Language</h3>
-                        <p>Memiliki keterampilan dalam HTML, CSS, dan JavaScript, dengan kemampuan untuk membuat struktur dokumen yang 
-                            baik menggunakan elemen semantik dan formulir interaktif, serta menerapkan gaya menarik untuk menciptakan tampilan responsif.</p>
-                    </div>
-                </div>
-
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
-                <div class="swiper-pagination"></div>
-            </div>
-        </div>
-    </div>
 
     <!-- contact section design -->
     <section class="contact" id="contact">
