--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@ berbasis data secara lebih menyeluruh.
 
         <!-- Tool 2 -->
         <div class="tool-box">
-            <img src="images/python.png" alt="Python">
+            <img src="images/Python.png" alt="Python">
             <h3>Python</h3>
             <p>Pandas, NumPy, Data Cleaning, Automation.</p>
         </div>
