Update tools section: replace Chrome DevTools with Enterprise Architect

--- a/index.html
+++ b/index.html
@@ -247,11 +247,10 @@ berbasis data secara lebih menyeluruh.
 
         <!-- Tool 8 -->
         <div class="tool-box">
-            <img src="images/chrome.png" alt="Chrome DevTools">
-            <h3>Chrome DevTools</h3>
-            <p>Element Inspector, CSS Debugging, Network Monitoring.</p>
+            <img src="images/enter.png" alt="Enterprise Architect">
+            <h3>Enterprise Architect</h3>
+            <p>System Modeling, UML Diagrams, Business Process Design.</p>
         </div>
-
         <!-- Tool 9 -->
         <div class="tool-box">
             <img src="images/javascript.png" alt="JavaScript">
