fix: update contact section, add city info, prepare for form integration

--- a/index.html
+++ b/index.html
@@ -424,7 +424,12 @@ berbasis data secara lebih menyeluruh.
             <div class="contact-info-item">
                 <i class='bx bx-phone'></i>
                 <span>+6283140223072</span>
-            </div>        
+            </div>     
+            
+            <div class="contact-info-item">
+                <i class='bx bx-map'></i>
+                <span>Tangerang Selatan, Indonesia</span>
+            </div>      
         </div>
 
         <!-- RIGHT SIDE FORM -->
