improve about image hover  on mobile

--- a/index.html
+++ b/index.html
@@ -103,10 +103,9 @@
 
     <p>
         Selain Web Development, saya juga mendalami <strong>pengolahan data dan analisis data</strong> menggunakan 
-        Python dan R. Saya berpengalaman melakukan data cleaning, exploratory data analysis (EDA), serta membuat visualisasi untuk 
-mengidentifikasi pola dan insight. Pengalaman ini membantu saya memahami proses pengambilan keputusan 
+        Python dan R. Saya mempelajari teknik seperti data cleaning, exploratory data analysis (EDA), serta membuat visualisasi untuk 
+mengidentifikasi pola dan insight. Ketertarikan ini membantu saya memahami proses pengambilan keputusan 
 berbasis data secara lebih menyeluruh.
-
     </p>
 
     <p>
@@ -273,11 +272,10 @@ berbasis data secara lebih menyeluruh.
         </div>
 
         <!-- Tool 12 -->
-        <!-- Tool 12 -->
         <div class="tool-box">
-            <img src="images/sheets.png" alt="Excel & Google Sheets">
-            <h3>Excel & Google Sheets</h3>
-            <p>Data Analysis, Pivot Tables, Reporting, Collaboration.</p>
+            <img src="images/sheets.png" alt="Google Colab & Google Sheets">
+            <h3>Google Sheets & Colab </h3>
+            <p>Data Analysis, Python Notebook, Visualization, Reporting.</p>
         </div>
     </div>
 </section>
