Replace React from tech stack with new frontend tool

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@ berbasis data secara lebih menyeluruh.
                 <span>CSS</span>
                 <span>JavaScript</span>
                 <span>PHP</span>
-                <span>React</span>
+                <span>Tailwind</span>
             </div>
         </div>
 
@@ -239,15 +239,17 @@ berbasis data secara lebih menyeluruh.
 
         <!-- Tool 7 -->
         <div class="tool-box">
-            <img src="images/figma.png" alt="Figma">
-            <h3>Figma</h3>
-            <p>UI/UX Design, Wireframing, Prototyping.</p>
+            <div class="tool-logos">
+                <img src="images/Netlify.svg" alt="Netlify">                
+            </div>
+            <h3>Netlify & Vercel</h3>
+            <p>Deployment, CI/CD, Hosting Frontend & Serverless Functions.</p>
         </div>
 
         <!-- Tool 8 -->
         <div class="tool-box">
             <img src="images/enter.png" alt="Enterprise Architect">
-            <h3>Enterprise Architect</h3>
+            <h3>Enterprise Architect & Draw.io</h3>
             <p>System Modeling, UML Diagrams, Business Process Design.</p>
         </div>
         <!-- Tool 9 -->
