Replace tools with new frontend tool

--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ berbasis data secara lebih menyeluruh.
         <div class="tool-box">
             <img src="images/git.png" alt="Git & GitHub">
             <h3>Git & GitHub</h3>
-            <p>Version Control, Branching Workflow.</p>
+            <p>Version Control, Branching Workflow, Repository Collaboration.</p>
         </div>
 
         <!-- Tool 6 -->
@@ -239,11 +239,9 @@ berbasis data secara lebih menyeluruh.
 
         <!-- Tool 7 -->
         <div class="tool-box">
-            <div class="tool-logos">
-                <img src="images/Netlify.svg" alt="Netlify">                
-            </div>
-            <h3>Netlify & Vercel</h3>
-            <p>Deployment, CI/CD, Hosting Frontend & Serverless Functions.</p>
+            <img src="images/figma.png" alt="Figma">
+            <h3>Figma</h3>
+            <p>Basic UI Design, Wireframing, Simple Prototyping.</p>
         </div>
 
         <!-- Tool 8 -->
